--- a/notebooks/senators.ipynb
+++ b/notebooks/senators.ipynb
@@ -14,6 +14,7 @@
     }
    ],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
@@ -128,15 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "POSTGRES_HOST = os.getenv('POSTGRES_HOST')\n",
+    "POSTGRES_PORT = os.getenv('POSTGRES_PORT')\n",
+    "POSTGRES_USER = os.getenv('POSTGRES_USER')\n",
+    "POSTGRES_HC_DB = os.getenv('POSTGRES_HC_DB')\n",
+    "\n",
     "connection_args = {\n",
-    "    'host': 'localhost',\n",
-    "    'user': 'user',\n",
-    "    'dbname': 'db',\n",
-    "    'port': 1234\n",
+    "    'host': POSTGRES_HOST,\n",
+    "    'user': POSTGRES_USER,\n",
+    "    'dbname': POSTGRES_HC_DB,\n",
+    "    'port': POSTGRES_PORT\n",
     "}\n",
     "\n",
     "connection = pg.connect(**connection_args)"
@@ -213,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
